--- a/valentine/index.html
+++ b/valentine/index.html
@@ -1,4 +1,4 @@
-//special thanks to michael, you make all these have opportunities to happen
+**special thanks to michael, you make all these have opportunities to happen：）**
 <!doctype html>
 <html lang="zh-CN">
   <head>
