--- a/valentine/index.html
+++ b/valentine/index.html
@@ -1,20 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valentine</title>
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
     <main class="stage">
-      <h1 class="title">Michael will you be my valentine?</h1>
-      <div class="actions" id="actions">
-        <button class="btn yes" id="yesButton">Yes</button>
-        <button class="btn no" id="noButton">No</button>
-      </div>
-      <canvas id="heartCanvas" class="heart-canvas" aria-hidden="true"></canvas>
+        <h1 class="title">Michael will you be my valentine?</h1>
+        <div class="actions" id="actions">
+            <button class="btn yes" id="yesButton">Yes</button>
+            <button class="btn no" id="noButton">No</button>
+        </div>
+        <canvas id="heartCanvas" class="heart-canvas" aria-hidden="true"></canvas>
     </main>
     <script src="./script.js"></script>
-  </body>
+</body>
 </html>
